[project]
name = "galaxis-hub"
version = "0.1.0"
description = "MCP server for the galaxis-hub client profiles platform (prototype)."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
galaxis-hub = "galaxis_hub.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxis_hub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
