[project]
name = "galaxis-hub"
version = "0.1.0"
description = "MCP server for the galaxis-hub client profiles platform (prototype)."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp[cli]>=1.0.0",
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
galaxis-hub = "galaxis_hub.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxis_hub"]
